[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app = "app.__main__:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
select = ["I"]

[dependency-groups]
dev = [
    "lefthook>=2.0.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
